--- a/OldMan/html/home.html
+++ b/OldMan/html/home.html
@@ -54,49 +54,63 @@
 					</div>
 				</div>
 				<div class="navigation" id="navigation">
-						<div class="TVNav" id="TVNav">
-							<span>电视剧</span><hr>
-							<ul>
-								<li>									
-									<a href="http://www.youku.com/" target="_blank"><img src="../picture/youku.jpg"></a>
-									<span><a href="http://www.youku.com/" target="_blank">优酷</a></span>
-								</li>
-								<li>									
-									<a href=""><img src="../picture/tudou.jpg"></a>
-									<span><a href="">土豆</a></span>
-								</li>
-								<li>									
-									<a href=""><img src="../picture/qiy.jpg"></a>
-									<span><a href="">爱奇艺</a></span>
-								</li>
-								<li>									
-									<a href=""><img src="../picture/letv.png"></a>
-									<span><a href="">乐视</a></span>
-								</li>
-								<li>									
-									<a href=""><img src="../picture/meipai.jpg"></a>
-									<span><a href="">美拍</a></span>
-								</li>
-							</ul>
-						</div>
-						<div class="theatreNav" id="theatreNav">
-							<span>戏剧</span><hr>
-						</div>
-						<div class="movieNav" id="">
-							<span>电影</span><hr>
-						</div>					
-						<div class="heathyNav" id="heathyNav">
-							<span>健康</span><hr>
-						</div>
-						<div class="educationNav" id="educationNav">
-							<span>教育</span><hr>
-						</div>
-						<div class="cookingNav" id="cookingNav">
-							<span>烹饪</span><hr>
-						</div>
-						<div class="commonNav" id="commonNav">
-							<span>小常识</span><hr>
-						</div>
+						<ul>
+							<li class="header" id="header"><span>视频</span></li>	
+							<li>
+								<a href="#"><img src="../picture/youku.jpg"></a>
+								<a class="link" href="#">优酷</a>
+							</li>
+							<li>
+								<a href="#"><img src="../picture/youku.jpg"></a>
+								<a href="#">优酷</a>
+							</li>
+							<li>
+								<a href="#"><img src="../picture/youku.jpg"></a>
+								<a href="#">优酷</a>
+							</li>
+						</ul>	
+						<ul>
+							<li class="header" id="header"><span>戏剧</span></li>
+							<li>
+								<a href="#"><img src="../picture/youku.jpg"></a>
+								<a href="#">优酷</a>
+							</li>	
+						</ul>	
+						<ul>
+							<li class="header" id="header"><span>电影</span></li>
+							<li>
+								<a href="#"><img src="../picture/youku.jpg"></a>
+								<a href="#">优酷</a>
+							</li>	
+						</ul>
+						<ul>
+							<li class="header" id="header"><span>健康</span></li>
+							<li>
+								<a href="#"><img src="../picture/youku.jpg"></a>
+								<a href="#">优酷</a>
+							</li>	
+						</ul>
+						<ul>
+							<li class="header" id="header"><span>教育</span></li>
+							<li>
+								<a href="#"><img src="../picture/youku.jpg"></a>
+								<a href="#">优酷</a>
+							</li>	
+						</ul>
+						<ul>
+							<li class="header" id="header"><span>烹饪</span></li>
+							<li>
+								<a href="#"><img src="../picture/youku.jpg"></a>
+								<a href="#">优酷</a>
+							</li>	
+						</ul>
+						<ul>
+							<li class="header" id="header"><span>小常识</span></li>
+							<li>
+								<a href="#"><img src="../picture/youku.jpg"></a>
+								<a href="#">优酷</a>
+							</li>	
+						</ul>
 				</div>
 			</div>
 			<div class="videoFocused" id="videoFocused">
